# design-patterns-cpp

./: .gitignore  CMakeLists.txt  README.md  build.sh
interview/avoid-case/: mem_leack.cc
interview/bit-operation/: bit_field.cc  pointer_cast.cc
interview/linked-list/: initial_list.cc  reverse_list.cc  weak_ptr.cc
interview/pointers/: smart_pointer.cc
interview/questions/: data_frame.cc  phone_keypad.cc  phone_keypad.py
interview/struct-pack/: mem_alignment.cc
